--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,12 +3,12 @@ name: Release
 on:
   push:
     tags:
-      - 'v*'
+      - "v*"
 
 jobs:
   release:
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -31,7 +31,11 @@ jobs:
             -x ".env*" \
             -x "composer.lock" \
             -x "package-lock.json" \
-            -x ".github/*"
+            -x ".github/*" \
+            -x "docs/*" \
+            -x "docs/**" \
+            -x "scripts/*" \
+            -x "scripts/**"
 
       - name: Create Release
         uses: softprops/action-gh-release@v1
@@ -41,12 +45,11 @@ jobs:
           prerelease: false
           body: |
             ## Version ${{ steps.get_version.outputs.VERSION }}
-            
+
             See CHANGELOG.md for details.
-            
+
             ### Installation
-            
+
             1. Download the ZIP file below
             2. Go to WordPress Admin → Plugins → Add New → Upload Plugin
             3. Upload the ZIP file and activate
-
